fixed inline code and code block overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,13 @@ div {
 }
 
 pre {
+    overflow: scroll;
     background-color: #f5f5f5;
     padding: 5px;
+}
+
+code {
+    background-color: #f5f5f5;
 }
 
 blockquote {
